fix(ui): make entity image appear centered in surrounding whitespace

--- a/src/client/stylesheets/style.less
+++ b/src/client/stylesheets/style.less
@@ -253,3 +253,7 @@ html {
 .entity-display-background {
 	background-color: #f1edeb;
 }
+
+.entity-display-image-box {
+	padding-right: 0px;
+}
